<?xml version="1.0"?>
<package format="3">
  <name>demo_messages</name>
  <version>0.1.0</version>
  <description>Demo message definitions</description>

  <maintainer email="ita@ita.es">Instituto Tecnológico de Aragón</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
