<?xml version="1.0"?>
<package format="3">
  <name>json_mqtt_bridge</name>
  <version>0.1.0</version>
  <description>Bridge between ROS2 messages and MQTT including JSON serialization</description>
  <maintainer email="ita@ita.es">Instituto Tecnologico de Aragon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>beeyonders_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
